test/1.4/errors/T_EARGT.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

typedef struct {
    uint32 (*ret_uint32)(conf_object_t *obj);
    void (*uint32_arg)(conf_object_t *obj, uint32 arg);
    void (*var_arg)(conf_object_t *obj, ...);
} test_interface_t;

implement test {
    /// ERROR EARGT
    method ret_uint32() -> (int32) { return 0; }
    /// ERROR EARGT
    method uint32_arg(int32 *arg) { }
    /// ERROR EMETH
    method var_arg() {}
}
